@@ -59,6 +59,26 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1618" tool="jira">
+                    <description>
+		                Backported Castor to Java 1.3 compatibility: JAXP usage at Unmarshaller.
+                    </description>
+                    <contributor>
+                        <name>Ralf Joachim</name>
+                        <email>ralf.joachim@syscon-world.de</email>
+                    </contributor>
+                    <submitter>
+                        <name>Ralf Joachim</name>
+                        <email>ralf.joachim@syscon-world.de</email>
+                    </submitter>
+                    <reporter>
+                        <name>Ralf Joachim</name>
+                        <email>ralf.joachim@syscon-world.de</email>
+                    </reporter>
+                    <type>Enh.</type>
+                    <module>XML</module>
+                    <date>20061012</date>
+                </bug>
                 <bug id="1620" tool="jira">
                     <description>
 		                Backported Castor to Java 1.3 compatibility: unknown methods.
