@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1618 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
+       Backported Castor to Java 1.3 compatibility: JAXP usage at Unmarshaller.
+       Details: http://jira.codehaus.org/browse/CASTOR-1618
+       (Ralf - 20061012)
+
 All:   Resolved issue CASTOR-1620 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
        Backported Castor to Java 1.3 compatibility: unknown methods.
        Details: http://jira.codehaus.org/browse/CASTOR-1620
